syntax = "proto3";

package calculator;

option java_package = "com.calculator.max";
option java_multiple_files = true;

message MaxRequest {
    int32 number = 1;
}

message MaxResponse {
    int32 maximum = 2;
}