syntax = "proto3";

package calculator;

option java_package = "com.calculator.prime";
option java_multiple_files = true;

message PrimeRequest {
    uint32 number = 1;
}

message PrimeResponse {
    uint32 prime_factor = 1;
}