syntax = "proto3";

package calculator;

option java_package = "com.calculator.sum";
option java_multiple_files = true;

message SumRequest {
    int32 first_digit = 1;
    int32 second_digit = 2;
}

message SumResponse {
    int32 result = 1;
}