syntax = "proto3";

package primes;

option java_package = "com.primes.api";
option java_multiple_files = true;

message PrimesRequest {
    uint32 number = 1;
}

message PrimesResponse {
    uint32 result = 1;
}

service PrimesService {
    rpc calculatePrimes(PrimesRequest) returns (stream PrimesResponse);
}